# BirdObservationLab

./: MANIFEST.in  README.md  cron_run_script.sh  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_pages.yaml
GS/: About.html  Contributing.html  Installation.html  Setup.html  Support.html
_sources/GS/: About.md.txt  Contributing.md.txt  Installation.md.txt  Setup.md.txt
_sources/advanced/: sequence_data.md.txt
_sources/tutorials/: convert_to_scalabel_format.md.txt
advanced/: sequence_data.html
doc/source/: conf.py  index.md
doc/source/GS/: About.md  Contributing.md  Installation.md  Setup.md  Support.md
doc/source/tutorials/: collecting.md  export_mot.md  export_sequence_folder.md  generating.md  operations.md  storing.md  tracking.md
docs/: Unbenanntes Diagramm.drawio
docs/source/GS/: Setup.md  Support.md
docs/source/tutorials/: analyzing.md  converting.md  export_as_video.md
notebooks/: bird_flight_analysis.ipynb  environmental_data.ipynb  funfunfun.ipynb  multi_flights_analysis_db.ipynb  multi_flights_analysis_old.ipynb  sequence_analysis.ipynb
scripts/: load_flights_and_create_image_folder.py  load_flights_and_create_video.py  pipeline_on_video_files.sh  prepare_data.py  run_detection_on_sequences.sh  run_soi_annotation_tool.sh  run_sparse_optical_flow.sh  sequence_data_processing.py  yolo_detection_controller.py
src/birdwatchpy/: StreamReceiver.py  config.py  exceptions.py  logger.py  utils.py
src/birdwatchpy/Generators/: ImageFolderLoader.py  StreamLoader.py  VideoLoader.py
src/birdwatchpy/bird_flight_analysis/: BirdFlightData.py  filter.py  trajs_plot.py
src/birdwatchpy/database/: connection.py  environment.py  fids_audio_text.py  fids_text.py  flight_data.py  mongo_retry.py  percentiles.py  sequences_db.py
src/birdwatchpy/detection/: DetectionData.py  DetectionResultsData.py  detect.py  non_maximum_suppression.py
src/birdwatchpy/environment/: EnvironmentData.py  astral_info.py
src/birdwatchpy/export/: export.py  export_sequences_with_many_birds.py  export_to_video.py
src/birdwatchpy/frames/: FrameData.py  annotation.py  frame_extractor.py  (+2 more)
tests/fixtures/: fixtures.py
tests/integration/: test_format_conversion.py  test_sequence_from_folder.py
tests/unit/: test_darkhelp_detection.py  test_format_conversion.py  test_mongodb.py
tutorials/: analyzing.html  collecting.html  convert_to_scalabel_format.html  converting.html  export_as_video.html  export_mot.html  export_sequence_folder.html  generating.html  operations.html  storing.html  tracking.html
(+45 files in other folders)
