[project]
name = "birdwatchpy"
#version = "0.2.5"
description = "Bird Observation System which allows to Detect and Track Birds in Video Footage."
authors = [
    {name = "Jonathan Kossick", email="jonathan.kossick@posteo.de"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = "==3.9"#


[tool.poetry]
name = "birdwatchpy"
version = "0.3.1"
description = ""
authors = ["Jonathan Kossick <jonathan.kossick@posteo.de>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["tracking", "detection", "birds"]
classifiers = [
    "Topic :: Software Development",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{include = "src/birdwatchpy"}]

[tool.poetry.dependencies]
python = ">=3.9, <=3.10"
numpy = "*"
yupi = "==0.8.5"
ray = "*"
pcfg = ">=0.1.5"
pymongo = "*"
astral = "*"
imgaug = "*"
bbox-utils = "==0.1.1"
dnspython = "*"

# Optional Dependencies
opencv-python = { version = "~=4.5.2.52", optional = true }
opencv-contrib-python = { version = "~=4.5.2.52", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mongodb = "*"


[tool.poetry.group.docs.dependencies]
twine = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
nbsphinx = "*"
pytest = "*"
rst-to-myst = {extras = ["sphinx"], version = "*"}
myst-parser = "*"

[tool.poetry.extras]
opencv-python = ["opencv-python", "opencv-contrib-python"]
pymongo = ["pymongo"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://gitlab.com/f4371/fids_bird_detection_and_tracking" # ToDo: Update
documentation = "https://gitlab.com/f4371/fids_bird_detection_and_tracking"# ToDo: Update
repository = "https://gitlab.com/f4371/fids_bird_detection_and_tracking"# ToDo: Update

[project.scripts]
poetry = "infer_pyproject.cli:main"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
mongodb_fixture_dir = 'tests/fixtures/mongodb'